<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="birthdate">Дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="international_passport_number">Номер загранпаспорта</string>
    <string name="international_passport_validity">Срок действия загранпаспорта</string>
    <string name="booking">Бронирование</string>
    <string name="departure">Вылет из</string>
    <string name="city_country">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="nights_count">Кол-во ночей</string>
    <string name="hotel">Отель</string>
    <string name="room">Номер</string>
    <string name="nutrition">Питание</string>
    <string name="customer_info">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="phone_default_mask">+7 (***) ***-**-**</string>
    <string name="mail">Почта</string>
    <string name="warning_booking">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="tour">Тур</string>
    <string name="fuel_charge">Топливный сбор</string>
    <string name="service_charge">Сервисный сбор</string>
    <string name="to_pay">К оплате</string>
</resources>